# SuiteSparseCMake

./: CMakeLists.txt  README.txt  SuiteSparseConfig.cmake.in
SuiteSparse/: CMakeLists.txt
